# XT

./: .editorconfig  .gitignore  CMakeLists.txt  ntdesign.txt  readme.txt  xt.cfg  xt.code-workspace
base/: CMakeLists.txt
base/boot/: CMakeLists.txt
base/boot/bootlib/: CMakeLists.txt  bootlibp.h  entry.c  misc.c
base/boot/bootmgr/: CMakeLists.txt  bootmgrp.h  main.c
base/boot/inc/: Base.h  bootlib.h
base/boot/inc/IndustryStandard/: Acpi64.h  IoRemappingTable.h
base/boot/inc/LoongArch64/: ProcessorBind.h
base/boot/inc/Protocol/: Include - Shortcut.lnk
base/boot/inc/Uefi/: UefiSpec.h
base/crt/: CMakeLists.txt
base/crt/stdio/: snprintf.c
base/crt/string/: memcpy.c  memmove.c  strlen.c
cmake/: efi.cmake  util.cmake
public/crt/inc/: crtp.h  stdio.h  string.h
public/sdk/inc/: xtdef.h  xtstatus.h
toolchains/: xt-amd64.cmake  xt-common.cmake
tools/: setup.bat
